Actually fix title spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -592,7 +592,7 @@ ul li {
     width: 25%; }
 
   .section-title {
-    margin: 0 0 30px; }
+    margin: 0 0 90px; }
 
   figure {
     margin-bottom: 0; }
